--- a/vocab/templates/minijax.html
+++ b/vocab/templates/minijax.html
@@ -49,6 +49,7 @@
     </div>
   </div>
 
+<!--##Similiar with vocab "row" part-->
 <div class="row">
   <div class="col-xs-6 text-center">
   <form id="entry">
@@ -58,6 +59,8 @@
   </form>
 </div></div>
 
+
+<!-- -------------------------------------------------------------------- -->
 <p id="response"> </p>  <!-- JavaScript will insert text here -->
 <p id="tiles"> </p> <!-- Illustration of inserting graphics into page -->
 <script>
