--- a/vocab/templates/vocab.html
+++ b/vocab/templates/vocab.html
@@ -78,17 +78,65 @@
   </div> <!-- col -->
 </div> <!-- row -->
 <br />
+
 <div class="row">
   <div class="col-xs-6 text-center">
-  <form id="entry" method="POST" action="/_check">
+  <form id="entry" method="POST" action="/_check"> 
+	<!--##call the function /_check in the py file--> 
     <label for="attempt">Word:</label>
     <input id="attempt" name="attempt" type="text" width="15"
       autocomplete="off"  autofocus />
-    <input type="submit" name="try" />
   </form>
 </div></div>
 
 <br />
+
+
+<!-- -------------------------------------------------------------------- -->
+<p id="response"> </p>  <!-- JavaScript will insert text here -->
+<p id="tiles"> </p> <!-- Illustration of inserting graphics into page -->
+<script>
+
+
+// credit: Michal Young: proj3_anagrams/vocab/templates/minijax.html
+
+// Suppress normal form submission
+$("#entry").submit( function(event) {
+   event.preventDefault();
+  });
+
+$("#attempt").keyup(function(event) {
+   var txt = $("#attempt").val();  // Current content of the input field
+   var keycode = event.which;      // They key that just went up
+   var letter = String.fromCharCode(keycode);
+
+   if (! "ABCDEFGHIJKLMNOPQRSTUVWXYZ".includes(letter)) { return }
+
+   //few cases: only rsval, matched, and jumble are both correct
+   $.getJSON( "/_check", { text: txt }, 
+              function(data) {
+                rsval = data.result.join_matches;
+		matched = data.result.in_WORDS;
+		jumble = data.result.in_jumble;
+
+                console.log("rsval: " + rsval)
+		console.log("matched: " + matched)
+		console.log("jumble: " + jumble)
+                if (rsval) {
+                   $("#response").html("That's enough!");
+                   $("#attempt").val("");
+                } else {
+                   $("#response").append(txt.length + " "); 
+                }
+                showTiles(txt);
+               }
+           );
+   });
+
+
+
+
+
 
 {% if session.matches|length is not equalto 0  %}
 <h2>You found </h2>
@@ -113,3 +161,4 @@
 
  </div> <!-- container -->
 </body> </html>
+</script>
