--- a/vocab/templates/vocab.html
+++ b/vocab/templates/vocab.html
@@ -116,18 +116,26 @@ $("#attempt").keyup(function(event) {
    $.getJSON( "/_check", { text: txt }, 
               function(data) {
                 rsval = data.result.join_matches;
-		matched = data.result.in_WORDS;
-		jumble = data.result.in_jumble;
+		            matched = data.result.in_WORDS;
+		            jumble = data.result.in_jumble;
 
                 console.log("rsval: " + rsval)
-		console.log("matched: " + matched)
-		console.log("jumble: " + jumble)
-                if (rsval) {
-                   $("#response").html("That's enough!");
-                   $("#attempt").val("");
-                } else {
-                   $("#response").append(txt.length + " "); 
+		            console.log("matched: " + matched)
+		            console.log("jumble: " + jumble)
+                if (!rsval && matched && jumble) {
+                  $("#response").html("That's enough!");
+                  $("#attempt").val("");
+                } 
+                else if (rsval && !matched && jumble) {
+                   $("#response").html("Input word is not in the word list!");
                 }
+                else if (rsv && matched && !jumble) {
+                   $("#response").html("Input characters are not in anagram");
+                }
+                else {
+                   $("#response").append(txt.length + " ");
+                }
+              
                 showTiles(txt);
                }
            );
@@ -137,7 +145,7 @@ $("#attempt").keyup(function(event) {
 
 
 
-
+/*
 {% if session.matches|length is not equalto 0  %}
 <h2>You found </h2>
 <p id="results">
@@ -156,8 +164,7 @@ $("#attempt").keyup(function(event) {
     {% endfor %}
   {% endif %}
 {% endwith %}
-
-
+*/
 
  </div> <!-- container -->
 </body> </html>
